# elle-est-fit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: cli.md  code.md
elle_est_fit/: __init__.py  cli.py  core.py  exceptions.py
elle_est_fit/payloads/: __init__.py  filter_chain.py
elle_est_fit/techniques/: __init__.py  base.py  log_poisoning.py  pearcmd.py  php_filters.py  php_session.py
elle_est_fit/utils/: __init__.py  validation.py
examples/: basic_usage.py
tests/: __init__.py  test_core.py
tests/techniques/: __init__.py  test_php_filters.py
tests/utils/: test_validation.py
